run fun planck cosmos with lbd=3.5,4,5; nframe=1

--- a/notebook/sim-haloCatalog.ipynb
+++ b/notebook/sim-haloCatalog.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,16 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f19f5990450>"
+       "<matplotlib.legend.Legend at 0x7fdbc15b5290>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,56 +100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0 13.288893192149622 5.878922970961632 2.5088971801754427\n",
-      "0 7 15.021109320041875 3.6410371986214343 14.113637781914116\n",
-      "1 0 13.27130766006101 5.857141628550561 0.9955766926409084\n",
-      "1 7 14.989642341085473 3.6504092675867454 6.9100715724498265\n",
-      "2 0 13.309556400762347 5.768467452356883 0.7901737134319838\n",
-      "2 7 14.96426601402435 3.6498930909773346 4.337892840222689\n",
-      "3 0 13.294457852950517 5.774311672201374 0.6729292825768195\n",
-      "3 7 15.00931588416667 3.5862104306951945 3.6497985918273854\n",
-      "4 0 13.30780987863881 5.7157361909382045 0.537665514222785\n",
-      "4 7 15.012722220646749 3.573062192870061 3.3240225803631644\n",
-      "5 0 13.257601192005916 5.760358953005877 0.42840873346534725\n",
-      "5 7 14.95423957587709 3.596344664917198 2.378479686468251\n",
-      "6 0 13.343900480218796 5.601180746302399 0.4236861714532498\n",
-      "6 7 15.047995004089783 3.497883856432297 2.5116395050369706\n",
-      "7 0 13.302866142303868 5.628594114880397 0.3547817408457846\n",
-      "7 7 15.011351385925225 3.5055574688286657 2.054560078700742\n",
-      "8 0 13.28806138999123 5.627765308751104 0.3233969988716018\n",
-      "8 7 15.008089621639382 3.500560437226479 1.9635933543860056\n",
-      "9 0 13.279584026101812 5.6171666251675045 0.2989127058830692\n",
-      "9 7 14.968674945171971 3.5177645862760745 1.7082455151864953\n",
-      "10 0 13.292498329675936 5.562645821485941 0.2764165820745351\n",
-      "10 7 14.963554198998322 3.513375639107107 1.6327838227114297\n",
-      "11 0 13.33877330179692 5.461336257875011 0.2693776204871234\n",
-      "11 7 15.03725590755656 3.418352281200438 1.6017582690258034\n",
-      "12 0 13.326473773014795 5.45236509126578 0.25024791102608374\n",
-      "12 7 15.015823480622196 3.4238555859362427 1.4854096079370058\n",
-      "13 0 13.317954631606753 5.448936663298272 0.23982017989000884\n",
-      "13 7 15.03011664388664 3.3999953804814016 1.4556093622650104\n",
-      "14 0 13.278908674614787 5.498203943179669 0.22581107325416416\n",
-      "14 7 15.012227913079437 3.3968693721824703 1.341213548851844\n",
-      "15 0 13.257527062783621 5.502067940148202 0.20928642452393273\n",
-      "15 7 15.02994170416665 3.368293166595191 1.31836536423587\n",
-      "16 0 13.289877167221007 5.4263001898208065 0.20648905458441155\n",
-      "16 7 15.006765995615304 3.3775828929694747 1.2428407516043976\n",
-      "17 0 13.265091104780678 5.438037084440167 0.19292610497425175\n",
-      "17 7 15.030740506392767 3.3436489451002394 1.2347682041727581\n",
-      "18 0 13.284898516186553 5.385350360593403 0.18997613723228263\n",
-      "18 7 15.028661219116886 3.326159563551008 1.1723177996028056\n",
-      "19 0 13.267205928946515 5.40634550564262 0.1849825474235816\n",
-      "19 7 15.04951952734571 3.3016399138114725 1.1822535482580152\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "omega_m=0.315   # Planck 2018\n",
     "\n",
@@ -167,17 +120,55 @@
     "        halo =  haloSim.nfw_lensTJ03(mass=M_200,conc=conc,redshift=z_h,\\\n",
     "                ra=0.,dec=0.,omega_m=omega_m)\n",
     "        rs_amin=halo.rs_arcsec/60.\n",
-    "        if im==7 or im==0:\n",
-    "            print(iz,im,log_m,conc,rs_amin)\n",
+    "        #print(halo.rs*(1+zh))\n",
+    "        #print(rs_amin)\n",
     "        #data.append((iz,im,z_h,log_m,conc,rs_amin))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## If we fix the comoving distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.0\n",
+      "4.0\n",
+      "3.0\n",
+      "2.0\n",
+      "2.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for iz,zh in enumerate(z_array):\n",
+    "    print(np.round(0.25/halo.cosmo.Dc(0.,zh)*60*180./np.pi))\n",
+    "    #print(0.1/(1+zh)/halo.cosmo.Da(0.,zh)*60*180./np.pi)"
+   ]
   }
  ],
  "metadata": {
