--- a/doc/paper_ms_method_HSCY1/citation.bib
+++ b/doc/paper_ms_method_HSCY1/citation.bib
@@ -1,3 +1,78 @@
+
+@ARTICLE{cmb-Planck2018-Cosmology,
+       author = {{Planck Collaboration} and {Aghanim}, N. and {Akrami}, Y. and
+         {Ashdown}, M. and {Aumont}, J. and {Baccigalupi}, C. and
+         {Ballardini}, M. and {Banday}, A.~J. and {Barreiro}, R.~B. and
+         {Bartolo}, N. and {Basak}, S. and {Battye}, R. and {Benabed}, K. and
+         {Bernard}, J. -P. and {Bersanelli}, M. and {Bielewicz}, P. and
+         {Bock}, J.~J. and {Bond}, J.~R. and {Borrill}, J. and {Bouchet}, F.~R. and
+         {Boulanger}, F. and {Bucher}, M. and {Burigana}, C. and
+         {Butler}, R.~C. and {Calabrese}, E. and {Cardoso}, J. -F. and
+         {Carron}, J. and {Challinor}, A. and {Chiang}, H.~C. and {Chluba}, J. and
+         {Colombo}, L.~P.~L. and {Combet}, C. and {Contreras}, D. and
+         {Crill}, B.~P. and {Cuttaia}, F. and {de Bernardis}, P. and
+         {de Zotti}, G. and {Delabrouille}, J. and {Delouis}, J. -M. and
+         {Di Valentino}, E. and {Diego}, J.~M. and {Dor{\'e}}, O. and
+         {Douspis}, M. and {Ducout}, A. and {Dupac}, X. and {Dusini}, S. and
+         {Efstathiou}, G. and {Elsner}, F. and {En{\ss}lin}, T.~A. and
+         {Eriksen}, H.~K. and {Fantaye}, Y. and {Farhang}, M. and
+         {Fergusson}, J. and {Fernandez-Cobos}, R. and {Finelli}, F. and
+         {Forastieri}, F. and {Frailis}, M. and {Fraisse}, A.~A. and
+         {Franceschi}, E. and {Frolov}, A. and {Galeotta}, S. and {Galli}, S. and
+         {Ganga}, K. and {G{\'e}nova-Santos}, R.~T. and {Gerbino}, M. and
+         {Ghosh}, T. and {Gonz{\'a}lez-Nuevo}, J. and {G{\'o}rski}, K.~M. and
+         {Gratton}, S. and {Gruppuso}, A. and {Gudmundsson}, J.~E. and
+         {Hamann}, J. and {Handley}, W. and {Hansen}, F.~K. and {Herranz}, D. and
+         {Hildebrandt}, S.~R. and {Hivon}, E. and {Huang}, Z. and
+         {Jaffe}, A.~H. and {Jones}, W.~C. and {Karakci}, A. and
+         {Keih{\"a}nen}, E. and {Keskitalo}, R. and {Kiiveri}, K. and {Kim}, J. and
+         {Kisner}, T.~S. and {Knox}, L. and {Krachmalnicoff}, N. and {Kunz}, M. and
+         {Kurki-Suonio}, H. and {Lagache}, G. and {Lamarre}, J. -M. and
+         {Lasenby}, A. and {Lattanzi}, M. and {Lawrence}, C.~R. and
+         {Le Jeune}, M. and {Lemos}, P. and {Lesgourgues}, J. and {Levrier}, F. and
+         {Lewis}, A. and {Liguori}, M. and {Lilje}, P.~B. and {Lilley}, M. and
+         {Lindholm}, V. and {L{\'o}pez-Caniego}, M. and {Lubin}, P.~M. and
+         {Ma}, Y. -Z. and {Mac{\'\i}as-P{\'e}rez}, J.~F. and {Maggio}, G. and
+         {Maino}, D. and {Mandolesi}, N. and {Mangilli}, A. and
+         {Marcos-Caballero}, A. and {Maris}, M. and {Martin}, P.~G. and
+         {Martinelli}, M. and {Mart{\'\i}nez-Gonz{\'a}lez}, E. and
+         {Matarrese}, S. and {Mauri}, N. and {McEwen}, J.~D. and
+         {Meinhold}, P.~R. and {Melchiorri}, A. and {Mennella}, A. and
+         {Migliaccio}, M. and {Millea}, M. and {Mitra}, S. and
+         {Miville-Desch{\^e}nes}, M. -A. and {Molinari}, D. and {Montier}, L. and
+         {Morgante}, G. and {Moss}, A. and {Natoli}, P. and
+         {N{\o}rgaard-Nielsen}, H.~U. and {Pagano}, L. and {Paoletti}, D. and
+         {Partridge}, B. and {Patanchon}, G. and {Peiris}, H.~V. and
+         {Perrotta}, F. and {Pettorino}, V. and {Piacentini}, F. and
+         {Polastri}, L. and {Polenta}, G. and {Puget}, J. -L. and
+         {Rachen}, J.~P. and {Reinecke}, M. and {Remazeilles}, M. and
+         {Renzi}, A. and {Rocha}, G. and {Rosset}, C. and {Roudier}, G. and
+         {Rubi{\~n}o-Mart{\'\i}n}, J.~A. and {Ruiz-Granados}, B. and
+         {Salvati}, L. and {Sandri}, M. and {Savelainen}, M. and {Scott}, D. and
+         {Shellard}, E.~P.~S. and {Sirignano}, C. and {Sirri}, G. and
+         {Spencer}, L.~D. and {Sunyaev}, R. and {Suur-Uski}, A. -S. and
+         {Tauber}, J.~A. and {Tavagnacco}, D. and {Tenti}, M. and
+         {Toffolatti}, L. and {Tomasi}, M. and {Trombetti}, T. and
+         {Valenziano}, L. and {Valiviita}, J. and {Van Tent}, B. and
+         {Vibert}, L. and {Vielva}, P. and {Villa}, F. and {Vittorio}, N. and {Wand
+        elt}, B.~D. and {Wehus}, I.~K. and {White}, M. and {White}, S.~D.~M. and
+         {Zacchei}, A. and {Zonca}, A.},
+        title = "{Planck 2018 results. VI. Cosmological parameters}",
+      journal = {ap},
+     keywords = {cosmic background radiation, cosmological parameters, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2020,
+        month = sep,
+       volume = {641},
+          eid = {A6},
+        pages = {A6},
+          doi = {10.1051/0004-6361/201833910},
+archivePrefix = {arXiv},
+       eprint = {1807.06209},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020A&A...641A...6P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{revKilbinger15,
    author = {{Kilbinger}, M.},
     title = "{Cosmology with cosmic shear observations: a review}",
@@ -132,6 +207,26 @@ archivePrefix = "arXiv",
       doi = {10.1093/pasj/psx070},
    adsurl = {http://adsabs.harvard.edu/abs/2018PASJ...70S..26O},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{HSC1-photoz,
+       author = {{Tanaka}, Masayuki and {Coupon}, Jean and {Hsieh}, Bau-Ching and
+         {Mineo}, Sogo and {Nishizawa}, Atsushi J. and {Speagle}, Joshua and
+         {Furusawa}, Hisanori and {Miyazaki}, Satoshi and {Murayama}, Hitoshi},
+        title = "{Photometric redshifts for Hyper Suprime-Cam Subaru Strategic Program Data Release 1}",
+      journal = {Publications of the Astronomical Society of Japan},
+     keywords = {cosmology: observations, galaxies: distances and redshifts, galaxies: general, surveys, Astrophysics - Astrophysics of Galaxies},
+         year = "2018",
+        month = "Jan",
+       volume = {70},
+          eid = {S9},
+        pages = {S9},
+          doi = {10.1093/pasj/psx077},
+archivePrefix = {arXiv},
+       eprint = {1704.05988},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/\#abs/2018PASJ...70S...9T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @ARTICLE{halo-NFW1997ApJ,
@@ -602,5 +697,24 @@ archivePrefix = {arXiv},
     doi = {10.1093/mnras/stw2805},
     url = {https://doi.org/10.1093/mnras/stw2805},
     eprint = {http://oup.prod.sis.lan/mnras/article-pdf/465/2/1454/24243465/stw2805.pdf}
+}
+
+@INBOOK{Starlet-Starck2015,
+title = "Starlet transform in astronomical data processing",
+abstract = "We begin with traditional source detection algorithms in astronomy. We then introduce the sparsity data model. The starlet wavelet transform serves as our main focus in this article. Sparse modeling and noise modeling are described. Applications to object detection and characterization, and to image filtering and deconvolution, are discussed. The multiscale vision model is a further development of this work, which can allow for image reconstruction when the point spread function is not known or not known well. Bayesian and other algorithms are described for image restoration. A range of examples is used to illustrate the algorithms.",
+keywords = "Point Spread Function, Wavelet Coefficient, Nonnegative Matrix Factorization, Blind Deconvolution, Poisson Noise",
+author = "Starck, {Jean Luc} and Fionn Murtagh and Mario Bertero",
+year = "2015",
+month = may,
+day = "30",
+doi = "10.1007/978-1-4939-0790-8_34",
+language = "English",
+isbn = "9781493907892",
+volume = "1",
+pages = "2053--2098",
+editor = "Otmar Scherzer",
+booktitle = "Handbook of Mathematical Methods in Imaging",
+publisher = "Springer New York",
+address = "United States",
 }
 
